Update for 2023, affiliate faculty.

--- a/cv.tex
+++ b/cv.tex
@@ -103,9 +103,9 @@
 % personal data
 \name{Jared}{Roesch}
 \title{Curriculum vitae}                           % optional, remove / comment the line if not wanted
-\address{Paul G. Allen Center for Computer Science and Engineering Box 352350}{98195-2350 Seattle, WA}{USA} % optional, remove / comment the line if not wanted; the "postcode city" and "country" arguments can be omitted or provided empty
+\address{OctoML, 1000 N Northlake Way}{98103 Seattle, WA}{USA} % optional, remove / comment the line if not wanted; the "postcode city" and "country" arguments can be omitted or provided empty
 \phone[mobile]{+1~(805)~405~5544}               % optional, remove / comment the line if not wanted; the optional "type" of the phone can be "mobile" (default), "fixed" or "fax"
-\email{jroesch@cs.uw.edu}                               % optional, remove / comment the line if not wanted
+\email{jroesch@octoml.ai}                               % optional, remove / comment the line if not wanted
 \homepage{homes.cs.washington.edu/~jroesch} % optional, remove / comment the line if not wanted
 \social[linkedin]{jaredroesch}                     % optional, remove / comment the line if not wanted
 \social[twitter]{roeschinc}                             % optional, remove / comment the line if not wanted
@@ -132,7 +132,7 @@
 \makecvtitle
 
 \section{Education}
-\cventry{2015--Present}{PhD}{University of Washington}{Seattle, WA}{5th Year}{}
+\cventry{2015--2020}{PhD}{University of Washington}{Seattle, WA}{}{}
 \cventry{2010--2015}{B.S. Computer Science - College of Creative Studies}{University of California Santa Barbara}{Santa Barbara, CA}{}{}
 
 % \section{Master thesis}
@@ -147,11 +147,6 @@
 \printbibliography[title=Publications]
 
 \section{Research Experience}
-
-\cventry{July 2019 - Present}{Co-founder}{OctoML}{}{}{
-  Founded a company based on my research working towards bringing human-level automation
-  to machine learning systems. Leading compiler R\&D and product development.
-  Raised approximately 20M in venture captial.\newline{}}
 
 \cventry{July 2017 - October 2017}{Research Intern}{Microsoft Research Redmond}{}{}{
   Working with Leonardo De Moura and Nikhil Swamy on verifying and compiling
@@ -185,6 +180,11 @@ In particular:%
 \end{itemize}}
 
 \section{Industry Experience}
+
+\cventry{July 2019 - Present}{CTO \& Co-founder}{OctoML}{}{}{
+  OctoML is building the systems layer to turn foundational models into complete products which act as next generation AI infrastructure. Raised over 130M+ in Venture Capital. Employ numerous UW CSE Alumni.
+  Leading both research for our products in conjunction with Tianqi Chen, and directly oversaw product development for the last year.
+  \newline{}}
 
 \cventry{June 2015 - September 2015}{Research Assistant}{Mozilla Research}{Remote}{}{
 Worked on the Rust programming language's type system, and its implementation. My
